--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -198,3 +198,27 @@ body {
   color: #28a745;
   border-color: #28a745;
 }
+
+.success-land-true {
+  color: #fff;
+  background-color: #28a745;
+  border-color: #28a745;
+}
+
+.success-land-false {
+  color: #fff;
+  background-color: #28a745;
+  border-color: #28a745;
+}
+
+.success-launch-true {
+  color: #fff;
+  background-color: #28a745;
+  border-color: #28a745;
+}
+
+.success-launch-false {
+  color: #fff;
+  background-color: #28a745;
+  border-color: #28a745;
+}
