--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -98,8 +98,23 @@ body {
 }
 
 .App-filter-button {
-    flex: 0 40%;
+    flex: 40%;
     margin: 10px;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 @keyframes App-logo-spin {
@@ -182,7 +197,7 @@ body {
         max-width: 50%;
     }
 }
-/* Desktops and laptops ----------- */
+
 @media only screen  and (min-width : 1224px) {
     .App-filter-card-container {
         flex: 4;
@@ -196,11 +211,6 @@ body {
         flex: 2;
         max-width: 33.333333%;
     }
-}
-
-/* Large screens ----------- */
-@media only screen  and (min-width : 1824px) {
-    /* Styles */
 }
 
 .success {
